--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,14 @@
-
 {
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "groq-sdk": "^0.37.0",
+    "multer": "^2.0.2",
+    "openai": "^6.15.0"
+  }
 }
